--- a/static/courses.html
+++ b/static/courses.html
@@ -55,7 +55,6 @@
             <nav>
                 <ul>
                     <li><a href="home">Home</a></li>
-                    <li><a href="about">About</a></li>
                     <li><a href="contact">Contact</a></li>
                     <li><a href="courses">Courses</a></li>
                 </ul>
@@ -86,7 +85,7 @@
         </main>
 
         <footer>
-            <p>&copy; Abhishek.Veeramalla</p>
+            <p>&copy; Nishank Koul</p>
         </footer>
     </body>
 </html>
